--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
       <!-- Note: this view is shown initially and for each question -->
       <div id="quizView" class="view">
         <div id="progress">
-          <div id="progressBar"></div>
+          <div id="progressBar">1</div>
         </div>
-        <div id="questionCount"></div>
+        <div id="questionCount">2</div>
 
         <div class="content">
-          <div id="question"></div>
-          <ul id="choices"></ul>
+          <div id="question">3</div>
+          <ul id="choices">
+            4
+          </ul>
         </div>
         <div id="timeRemaining">Remaining Time: <span>00:00</span></div>
         <button id="nextButton" class="button-primary">Answer</button>
       </div>
 
       <!-- End Quiz View -->
-      <!-- Note: this view is initially hidden using the style attribute 'display: none' -->      
+      <!-- Note: this view is initially hidden using the style attribute 'display: none' -->
       <div id="endView" class="view" style="display: none">
         <div id="result-progress">
           <div id="resultProgressBar"></div>
@@ -43,12 +45,10 @@
       </div>
     </div>
 
-    
     <!-- The scripts are placed at the end of the document so that all the HTML elements are loaded before we try to access them -->
     <!-- Important: Leave this as it is. Do not change the order of the scripts! -->
     <script src="src/question.js"></script>
     <script src="src/quiz.js"></script>
     <script src="src/index.js"></script>
-    
   </body>
 </html>
